--- a/css/style.css
+++ b/css/style.css
@@ -55,45 +55,47 @@
 
 /*LOGIN*/
 
-#login-container,
-#login-form,
+.login-container,
+.login-form,
 .label-icon,
-#login-title,
+.login-title,
 .loginInput-container,
-#login-title h1 {
+.login-title h1 {
     display: flex;
 }
 
-#login-container,
-#login-form,
-#login-title {
+.login-container,
+.login-form,
+.login-title {
     justify-content: center;
     align-items: center;
     height: auto;
 }
 
 .loginInput-container,
-#login-container,
-#login-form,
-#login-title,
-#login-title h1 {
+.login-container,
+.login-form,
+.login-title,
+.login-title h1 {
     flex-direction: column;
 }
 
-#login-title,
-#login-title small,
+.login-title,
+.login-title small,
 .btn-form,
 .label-icon {
     margin: 10px 0;
 }
 
-#logo,
-#login-form {
+.logo,
+.login-form {
     width: 30%;
 }
-
+/* #cadastro-form{
+  
+} */
 .btn-form,
-#login-form {
+.login-form {
     border-radius: 15px;
 }
 
@@ -112,22 +114,22 @@
     width: 80%;
 }
 
-#login-container {
+.login-container {
     width: 100%;
     height: 100vh;
 }
 
-#login-form {
+.login-form {
     border: 1px solid #94958B;
     box-shadow: 8px 8px 34px #cccccc,
         -8px -8px 34px #f4f4f4;
 }
 
-#login-title h1 {
+.login-title h1 {
     text-align: center;
 }
 
-#login-title small {
+.login-title small {
     color: #94958B;
     font-size: 0.5em;
     font-weight: 300;
@@ -250,6 +252,40 @@ footer {
 }
 
 /*FIM-FOOTER*/
+
+
+/*Cadastro*/
+
+#cadastro-container{
+    margin: 150px 0px;
+}
+.checkpolitica {
+    display: flex;
+    margin: 25px 37px;
+    font-size: 15px;
+    /* border-top: 1px solid #ccc; */
+    /* padding-top: 30px; */
+}
+
+.check {
+    margin-right: 5px;
+}
+
+.voltarusuario {
+    display: flex;
+    flex-direction: row;
+    margin-right: 100px;
+    font-size: 15px;
+    padding: 30px;
+    gap: 5px;
+}
+
+.separador{
+    border-top: 1px  solid #ccc;
+    width: 90%;
+    margin: 20px;
+}
+
 
 @media (max-width: 480px) {
     /*LOGIN*/
