--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ footer {
 .checkpolitica,
 .voltarusuario {
     display: flex;
-    margin: 10px;
+    margin: 15px;
     font-size: 14px;
 }
 
@@ -837,9 +837,9 @@ th {
 }
 
 .questao-font{
-    position: relative;
-    left: 30%;
     color: #94958B;
+    width: 100%;
+    margin-left: 50%;
 }
 
 .questao-enunciado{
